--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>
         Html & css 1st project
     </title>
-    <link rel="stylesheet" href="css/font-awesome.min.css ">
+    <link rel="stylesheet" href="Css/font-awesome.min.css ">
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Css/style.css">
 </head>
@@ -232,7 +232,7 @@
     </div>
     <div class="service-item">
         <div class="service-item-img">
-            <img src="imges/about/about1.webp" alt="">
+            <img src="Imges/about/about1.webp" alt="">
         </div>
         <ul class="service-bollets">
             <li class="active"></li>
